Fixed referiew script and moved html pages to a better named folder

--- a/Scripts/ImagesDocumentation/lib/index.html.erb
+++ b/Scripts/ImagesDocumentation/lib/index.html.erb
@@ -7,6 +7,23 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
+    <style type="text/css">
+      ul {
+        list-style-type: none;
+        padding: 0;
+      }
+
+      img.component {
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        width: 100%;
+        height: auto;
+      }
+
+      h1 {
+        cursor: pointer;
+      }
+    </style>
     <body>
       <p align="center"><%= @project_name %> Components</p>
       <ul>
