Adds support for dark mode to the limit of my design skills

--- a/OctoPodium/Custom Cells/TrendingRepositoryCell.xib
+++ b/OctoPodium/Custom Cells/TrendingRepositoryCell.xib
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14810.12" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14766.15"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="359" height="95"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="359" height="94.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="359" height="95"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="google / seesaw" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="MaE-03-hr7" userLabel="name">
@@ -24,7 +22,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gAa-rb-GDC" userLabel="description">
-                        <rect key="frame" x="16" y="33.5" width="335" height="31"/>
+                        <rect key="frame" x="16" y="33.5" width="335" height="31.5"/>
                         <string key="text">Seesaw v2 is a Linux Virtual Server (LVS) based load balancing platform.
 </string>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
@@ -32,19 +30,20 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Language" translatesAutoresizingMaskIntoConstraints="NO" id="T3c-GY-a65">
-                        <rect key="frame" x="16" y="70" width="16" height="16"/>
+                        <rect key="frame" x="16" y="70.5" width="16" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="2Wr-0A-gla"/>
                             <constraint firstAttribute="width" constant="16" id="8mW-OG-4Cz"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Go • 1,177 stars today" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkM-3o-B4q" userLabel="languagesStarsSince">
-                        <rect key="frame" x="37" y="69.5" width="314" height="17"/>
+                        <rect key="frame" x="37" y="70" width="314" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 <constraints>
                     <constraint firstItem="DkM-3o-B4q" firstAttribute="leading" secondItem="T3c-GY-a65" secondAttribute="trailing" constant="5" id="1y5-0G-0my"/>
                     <constraint firstItem="DkM-3o-B4q" firstAttribute="top" secondItem="gAa-rb-GDC" secondAttribute="bottom" constant="5" id="6ef-No-i9y"/>
